[package]
name = "scispeak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
disambiseq = "0.1.10"
fxread = "0.2.10"
gzp = { version="0.11.3", features=["deflate_rust"], default-features = false }
hashbrown = "0.14.1"
